force-app/main/default/Objects/SkillQuestionAnswer__c/SkillQuestionAnswer__c.object-meta.xml
<CustomObject>
    <description>Answers for skill questions</description>
    <label>Skill Question Answer</label>
    <nameField>
        <displayFormat>SQA{000}</displayFormat>
        <label>Skill Question Answer Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skill Question Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>