force-app/main/default/Objects/SkillQuestionAnswer__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <description>Possible answer to the question</description>
    <inlineHelpText>Possible answer to the question</inlineHelpText>
    <label>Answer</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>