force-app/main/default/Objects/SkillQuestionAnswer__c/fields/IsCorrect__c.field-meta.xml
<CustomField>
    <fullName>IsCorrect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that answer it the correct one</description>
    <inlineHelpText>Indicates that answer it the correct one</inlineHelpText>
    <label>Is Correct</label>
    <type>Checkbox</type>
</CustomField>