force-app/main/default/Objects/SkillQuestionAnswer__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Used to order answers in display</description>
    <inlineHelpText>Used to order answers in display</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>