force-app/main/default/Objects/SkillQuestionAnswer__c/fields/QuestionText__c.field-meta.xml
<CustomField>
    <fullName>QuestionText__c</fullName>
    <formula>SkillQuestion__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuestionText</label>
    <type>Text</type>
</CustomField>