force-app/main/default/Objects/SkillQuestionAnswer__c/fields/Skill_ID__c.field-meta.xml
<CustomField>
    <fullName>Skill_ID__c</fullName>
    <description>Unique identifier of the skill to which this record is related</description>
    <formula>SkillQuestion__r.Skill__c</formula>
    <inlineHelpText>Unique identifier of the skill to which this record is related</inlineHelpText>
    <label>Skill ID</label>
    <type>Text</type>
</CustomField>