force-app/main/default/Objects/SkillQuestionAnswer__c/fields/SkillQuestion__c.field-meta.xml
<CustomField>
    <fullName>SkillQuestion__c</fullName>
    <label>Skill Question</label>
    <referenceTo>SkillQuestion__c</referenceTo>
    <relationshipLabel>Skill Question Answers</relationshipLabel>
    <relationshipName>Skill_Question_Answers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>